# Obj-Extraction

./: .gitignore  README.md  Run_All.py  hobbies_refactor_list.py  pybindings_setup.bat  requirements.txt
CSV to JSON/: csv_to_json_muscles.py  data_to_database.py  exercise_data.csv  exercise_data_example.csv  instructions.txt
GUI/: ImageContainerController.py  ImageContainerView.py  ImageViewer.py  MainController.py  Watcher.py
MainScripts/: ObjToGeometryFiles.py  PixelGrabber.py  PixelIndexer.py  PixelToFace.py  TriangleDecomposer.py  Triangles.py  UtilityFunctions.py
Old (ignore)/: FaceScanner_GPU.py
generated_design/: __init__.py
pixels and uv stuff/: FaceScanner.py  FaceScanner_test.py  ObjFileToGeometryFiles.py  ObjFileToJSONFiles.py  Pixel Grabber.py  PixelGrabber.py  PixelGrabber_Test.py  PixelIndexer.py  PixelToFace.py  PixelToFace_test.py  QuadTree.py  QuadTree2.py  QuadTree3.py  QuadTree4.py  Run_All.py  (+6 more)
pixels and uv stuff/src/: CMakeLists.txt  main.cpp  main.py
pixels and uv stuff/src/bresenham_stuff/: bresenham_setup.py
pixels and uv stuff/src/bresenham_stuff/bresenham_triangle_class.egg-info/: PKG-INFO
pixels and uv stuff/src/bresenham_triangle_class.egg-info/: SOURCES.txt
pixels and uv stuff/src/helper_functions/: obj_helper_functions.cpp  obj_helper_functions_setup.py  test.py
pixels and uv stuff/src/obj_helper_functions/: notes.txt  obj_helper_functions.cpp  test.py
pixels and uv stuff/src/obj_helper_functions/obj_helper_functions.egg-info/: SOURCES.txt  top_level.txt
pixels and uv stuff/src/pybind11/pybind11/: CMakeLists.txt
(+63 files in other folders)
